samples/_failures_safe/1761427819_942515_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16391cc0.c: In function ‘main’:
./samples/SAFE/__tmp_16391cc0.c:170:5: error: expected identifier or ‘(’ at end of input
  170 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_16391cc0.c:170:5: error: expected declaration or statement at end of input
